--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
+    "argv": "0.0.2",
     "dat.gui": "^0.7.6",
+    "fs": "0.0.1-security",
+    "html-webpack-tags-plugin": "^2.0.17",
     "normalize.css": "^8.0.1",
     "three": "^0.112.1"
   }
